--- a/src/shared/Header/views/BurgerMenu/BurgerMenu.scss
+++ b/src/shared/Header/views/BurgerMenu/BurgerMenu.scss
@@ -1,4 +1,4 @@
-@use "style/variables" as vars;
+@use "style/variables";
 
 .BurgerMenu {
   display: none;
@@ -15,8 +15,8 @@
     display: block;
     width: 24px;
     height: 24px;
-    background-color: vars.$control-background-color;
-    border-radius: vars.$radius-large;
+    background-color: variables.$control-background-color;
+    border-radius: variables.$radius-large;
   }
 
   @media (max-width: 767px) {
