--- a/src/style/customVariables/media.scss
+++ b/src/style/customVariables/media.scss
@@ -1,5 +1,5 @@
-$m-desktop-width: 1280px;
-$m-tablet-width: 1024px;
-$m-tablet-width-small: 768px;
-$m-mobile-width: 428px;
-$m-mobile-width-small: 320px;
+$desktop-width: 1280px;
+$tablet-width: 1024px;
+$tablet-width-small: 768px;
+$mobile-width: 428px;
+$mobile-width-small: 320px;
