--- a/src/routes/DocsPage/views/UiComponentInfo/views/ComponentDescription/ComponentDescription.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/views/ComponentDescription/ComponentDescription.scss
@@ -1,4 +1,4 @@
-@use "style/variables" as vars;
+@use "style/variables";
 
 .ComponentDescription {
     &__text {
@@ -12,11 +12,11 @@
     &__description {
         max-width: 792px;
 
-        @media (max-width: vars.$m-tablet-width) {
+        @media (max-width: variables.$tablet-width) {
             max-width: 672px;
         }
 
-        @media (max-width: vars.$m-tablet-width-small) {
+        @media (max-width: variables.$tablet-width-small) {
             max-width: 520px;
         }
     }
@@ -34,9 +34,9 @@
         }
 
         .ButtonView .ButtonView__link .ButtonView__text {
-            font-size: vars.$font-size-16;
-            font-weight: vars.$font-weight-sm;
-            line-height: vars.$line-height-22;
+            font-size: variables.$font-size-16;
+            font-weight: variables.$font-weight-sm;
+            line-height: variables.$line-height-22;
 
             &::before {
                 height: 100%;
