--- a/src/routes/DocsPage/views/UiComponentInfo/views/DemoCard/DemoCard.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/views/DemoCard/DemoCard.scss
@@ -1,4 +1,4 @@
-@use "style/variables" as vars;
+@use "style/variables";
 
 .DemoCard {
     margin-bottom: 40px;
@@ -14,6 +14,6 @@
     }
 
     &__link { 
-        color: vars.$text-color;
+        color: variables.$text-color;
     }
 }
