--- a/src/routes/IndexPage/views/AdvantagesSection/AdvantagesSection.scss
+++ b/src/routes/IndexPage/views/AdvantagesSection/AdvantagesSection.scss
@@ -1,17 +1,17 @@
-@use "style/variables" as vars;
+@use "style/variables";
 
 .AdvantagesSection {
     padding-top: 80px;
     padding-bottom: 160px;
 
-    @media (max-width: vars.$m-tablet-width) {
+    @media (max-width: variables.$tablet-width) {
         padding-bottom: 124px;
     }
-    @media (max-width: vars.$m-tablet-width-small) {
+    @media (max-width: variables.$tablet-width-small) {
         padding-top: 40px;
         padding-bottom: 80px;
     }
-    @media (max-width: vars.$m-mobile-width-small){
+    @media (max-width: variables.$mobile-width-small){
         padding-top: 24px;      
         padding-bottom: 24px;
     }
