--- a/src/routes/IndexPage/views/ExamplesSection/views/ExampleCard/ExampleCard.scss
+++ b/src/routes/IndexPage/views/ExamplesSection/views/ExampleCard/ExampleCard.scss
@@ -1,4 +1,4 @@
-@use "style/variables" as vars;
+@use "style/variables";
 
 .ExampleCard {
     $root: &;
@@ -7,12 +7,12 @@
     flex-flow: column nowrap;
     align-items: center;
     padding: 32px;
-    background-color: vars.$custom-background-color-f9;
+    background-color: variables.$custom-background-color-f9;
     border-radius: 20px;
     height: 530px;
     width: 100%;
 
-    @media (max-width: vars.$m-mobile-width-small) {
+    @media (max-width: variables.$mobile-width-small) {
         height: 320px;
         padding: 16px;
     }
@@ -21,13 +21,13 @@
         margin-bottom: 0;
         align-self: flex-start;
 
-        font-size: vars.$font-size-24;
-        font-weight: vars.$font-weight-sm;
-        line-height: vars.$line-height-34;
+        font-size: variables.$font-size-24;
+        font-weight: variables.$font-weight-sm;
+        line-height: variables.$line-height-34;
 
-        @media (max-width: vars.$m-mobile-width-small) {
-            font-size: vars.$font-size-14;
-            line-height: vars.$line-height-16;
+        @media (max-width: variables.$mobile-width-small) {
+            font-size: variables.$font-size-14;
+            line-height: variables.$line-height-16;
         }
     }
 
@@ -69,7 +69,7 @@
     &__img-wrapper {
         margin: auto 0;
 
-        @media (max-width: vars.$m-mobile-width-small) {
+        @media (max-width: variables.$mobile-width-small) {
             img {
                 width: 100%;
                 height: 100%;
@@ -91,14 +91,14 @@
         align-items: center;
 
         &-text {
-            font-size: vars.$font-size-24;
-            font-weight: vars.$font-weight-sm;
-            line-height: vars.$line-height-34;
+            font-size: variables.$font-size-24;
+            font-weight: variables.$font-weight-sm;
+            line-height: variables.$line-height-34;
             margin-bottom: 0;
 
-            @media (max-width: vars.$m-mobile-width-small) {
-                font-size: vars.$font-size-14;
-                line-height: vars.$line-height-16;
+            @media (max-width: variables.$mobile-width-small) {
+                font-size: variables.$font-size-14;
+                line-height: variables.$line-height-16;
             }
         }
 
