--- a/src/shared/Header/Header.scss
+++ b/src/shared/Header/Header.scss
@@ -1,4 +1,4 @@
-@use "style/variables" as vars;
+@use "style/variables";
 
 :root {
     --control-background-color: #f1f5f7;
@@ -17,13 +17,13 @@ $control-background-color: var(--control-background-color);
     align-items: center;
     justify-content: space-between;
     height: auto !important;
-    background-color: vars.$custom-background-color;
+    background-color: variables.$custom-background-color;
     height: 64px;
     max-height: 64px;
 
     box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
 
-    @media (max-width: vars.$m-tablet-width-small) {
+    @media (max-width: variables.$tablet-width-small) {
         padding: 0 12px;
     }
 
@@ -32,11 +32,11 @@ $control-background-color: var(--control-background-color);
             display: flex;
             gap: 90px;
 
-            @media (max-width: vars.$m-tablet-width) {
+            @media (max-width: variables.$tablet-width) {
                 gap: 60px;
             }
 
-            @media (max-width: vars.$m-tablet-width-small) {
+            @media (max-width: variables.$tablet-width-small) {
                 gap: 30px;
             }
 
@@ -46,10 +46,10 @@ $control-background-color: var(--control-background-color);
 
             &-item {
                 .ButtonView__text {
-                    font-size: vars.$font-size-16;
-                    font-weight: vars.$font-weight-sm;
-                    line-height: vars.$line-height-22;
-                    color: vars.$custom-text-color;
+                    font-size: variables.$font-size-16;
+                    font-weight: variables.$font-weight-sm;
+                    line-height: variables.$line-height-22;
+                    color: variables.$custom-text-color;
                 }
             }
         }
@@ -81,7 +81,7 @@ $control-background-color: var(--control-background-color);
                 svg {
                     path,
                     circle {
-                        stroke: vars.$custom-icon-color;
+                        stroke: variables.$custom-icon-color;
                     }
                 }
             }
@@ -100,13 +100,13 @@ $control-background-color: var(--control-background-color);
             .ButtonGroupView__button:not(.ButtonGroupView__button_active) .IconView svg path,
             rect,
             circle {
-                stroke: vars.$custom-icon-color;
+                stroke: variables.$custom-icon-color;
             }
 
             .ButtonGroupView__button_active .IconView svg path,
             rect,
             circle {
-                stroke: vars.$custom-icon-active;
+                stroke: variables.$custom-icon-active;
             }
         }
 
