--- a/src/shared/Header/views/LanguagesDropDown/LanguagesDropDown.scss
+++ b/src/shared/Header/views/LanguagesDropDown/LanguagesDropDown.scss
@@ -1,4 +1,4 @@
-@use "style/variables" as vars;
+@use "style/variables";
 
 .LanguagesDropDown {
     width: 59px !important;
@@ -21,8 +21,8 @@
             justify-content: center;
             align-items: center;
 
-            font-size: vars.$font-size-18;
-            line-height: vars.$line-height-22;
+            font-size: variables.$font-size-18;
+            line-height: variables.$line-height-22;
         }
     }
 
