--- a/src/shared/Header/views/SearchInput/SearchInput.scss
+++ b/src/shared/Header/views/SearchInput/SearchInput.scss
@@ -1,4 +1,4 @@
-@use "style/variables" as vars;
+@use "style/variables";
 
 .SearchInput {
     .InputFieldView {
@@ -18,14 +18,14 @@
         svg {
             path,
             circle {
-                stroke: vars.$custom-icon-color;
+                stroke: variables.$custom-icon-color;
             }
         }
     }
 
     .InputFieldView__input {
         padding-left: 12px;
-        background-color: vars.$control-background-color;
+        background-color: variables.$control-background-color;
         border: none;
     }
 }
