--- a/src/routes/IndexPage/views/InteractiveSection/views/ComponentOptions/ComponentOptions.scss
+++ b/src/routes/IndexPage/views/InteractiveSection/views/ComponentOptions/ComponentOptions.scss
@@ -29,9 +29,11 @@
             display: flex;
             flex-flow: row nowrap;
             gap: 4px;
+            max-width: 581px;
         }
 
         @media (max-width: 800px) {
+            max-width: 481px;
             gap: 0;
             align-items: center;
         }
