--- a/src/shared/Section/Section.scss
+++ b/src/shared/Section/Section.scss
@@ -10,7 +10,7 @@
         padding: 0 16px;
     }
 
-    @media (max-width: variables.$mobile-width-small) {
+    @media (max-width: 352px) {
         padding: 0;
     }
 
