Added HeroSection animation

--- a/src/routes/IndexPage/views/HeroSection/views/AnimatedIcons/AnimatedIcons.scss
+++ b/src/routes/IndexPage/views/HeroSection/views/AnimatedIcons/AnimatedIcons.scss
@@ -13,7 +13,7 @@
         display: none;
     }
 
-    &__item {
+    .animated-icon {
         position: absolute;
         display: block;
         width: 65px;
