--- a/src/shared/Header/views/HeaderLogo/HeaderLogo.scss
+++ b/src/shared/Header/views/HeaderLogo/HeaderLogo.scss
@@ -1,12 +1,22 @@
 @use "style/variables";
 
 .HeaderLogo {
+    width: 155px;
+    height: 65px;
+
+    .ButtonView__link {
+        display: block;
+        width: 100% !important;
+        height: 100% !important;
+    }
 
     .ButtonView__text {
+        width: 100%;
+        height: 100%;
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
-        gap: 8px;
+        gap: 16px;
     }
 
     @media (max-width: variables.$mobile-width-small) {
@@ -15,6 +25,8 @@
     }
 
     &__icon {
+        width: 65px;
+        height: 28px;
         transform: translateY(3px);
 
         @media (max-width: variables.$mobile-width-small) {
@@ -26,6 +38,11 @@
         svg {
             width: 100%;
             height: 100%;
+        }
+
+        .AnimatedLogo__icon_foreground {
+            width: 42px;
+            height: 28px;
         }
     }
 
