--- a/src/routes/DocsPage/views/UiComponentInfo/UiComponentInfo.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/UiComponentInfo.scss
@@ -1,4 +1,5 @@
 @use "style/variables";
+@use "style/mixins";
 
 .UiComponentInfo {
     &__content {
@@ -59,5 +60,9 @@
         @media (max-width: variables.$mobile-width) {
             margin: 32px auto;
         }
+    }
+
+    &__default { 
+        @include mixins.markdown();
     }
 }
