--- a/src/style/customVariables/index.scss
+++ b/src/style/customVariables/index.scss
@@ -1,3 +1,3 @@
-@forward 'typography.scss';
-@forward 'colors.scss';
-@forward 'media.scss';
+@forward "typography.scss";
+@forward "colors.scss";
+@forward "media.scss";
