--- a/src/style/customVariables/colors.scss
+++ b/src/style/customVariables/colors.scss
@@ -2,6 +2,7 @@
     --custom-text-color: #000000;
     --custom-text-descr-color: rgba(0, 0, 0, 0.6);
     --custom-text-descr-color-revert: rgba(255, 255, 255, 0.6);
+    --custom-text-color-base: rgba(0, 0, 0, 0.30);
     --custom-main-background-color: #ffffff;
     --custom-background-color: #ffffff;
     --custom-background-color-f9: #f9f9f9;
@@ -16,6 +17,7 @@ html[data-theme="dark"] {
     --custom-text-color: #ffffff;
     --custom-text-descr-color: rgba(255, 255, 255, 0.6);
     --custom-text-descr-color-revert: rgba(0, 0, 0, 0.6);
+    --custom-text-color-base: rgba(255, 255, 255, 0.30);
     --custom-main-background-color: #23232c;
     --custom-background-color: #333646;
     --custom-background-color-f9: #333646;
@@ -38,6 +40,8 @@ $custom-text-descr-color-revert: var(--custom-text-descr-color-revert);
 $custom-icon-color: var(--custom-icon-color);
 $custom-icon-active: var(--custom-icon-active);
 $control-active-background-color: var(--control-active-background-color);
+$custom-text-color-base: var(--custom-text-color-base);
+
 
 $grayF8: #f8f8f8;
 $grayF0: #f0f0f0;
