--- a/src/routes/DocsPage/DocsPage.scss
+++ b/src/routes/DocsPage/DocsPage.scss
@@ -1,99 +1,39 @@
 @use "style/variables";
-
-$sidebar-width: 332px;
-
-:root {
-    --sidebar-background-color: #f1f5f7;
-    --sidebar-bottom-line-color: rgba(0, 0, 0, 0.10);
-    --sidebar-background-color-selected: #DBE2E6;
-}
-
-html[data-theme="dark"] {
-    --sidebar-background-color: #333646;
-    --sidebar-bottom-line-color: rgba(255, 255, 255, 0.10);
-    --sidebar-background-color-selected: #272A37;
-}
-
-$sidebar-background-color: var(--sidebar-background-color);
-$sidebar-bottom-line-color: var(--sidebar-bottom-line-color);
-$sidebar-background-color-selected: var(--sidebar-background-color-selected);
+@use "style/mixins";
 
 .DocsPage {
     display: flex;
     flex-flow: row nowrap;
 
     &__sidebar {
-        padding: 16px;
-        width: $sidebar-width;
-        min-width: $sidebar-width;
-        background-color: $sidebar-background-color;
-        min-height: 900px;
-        box-shadow: 1px 0px 4px 0px rgba(0, 0, 0, 0.1);
+        @include mixins.sidebar(100vh);
 
         @media (max-width: 1442px) {
             width: 272px;
             min-width: 272px;
         }
-
+    
         @media (max-width: variables.$tablet-width-small) {
             width: 224px;
             min-width: 224px;
             padding: 12px;
         }
 
-        @media (max-width: 624px) {
-            display: none;
-        }
-
-        .TreeView {
-            display: flex;
-            flex-flow: column nowrap;
-            gap: 8px;
-        }
-
-        .TreeView__item {
-            //Тоже самое что и .ButtonView
-            &-label {
-                background-color: transparent;
-                margin: 0;
-                padding: 8px 12px !important;
-
-                &:before {
-                    display: none;
-                }
-            }
-
-            //Стили для родительского элемента
-            &_has-items .TreeView__item-label {
-                border-bottom: 1px solid $sidebar-bottom-line-color;
-                border-radius: 0;
-                .ButtonView__link .ButtonView__text {
-                    color: variables.$custom-text-color-base;
-                }
-            }
-        }
-
-        .TreeView__item:not(.TreeView__item_has-items) {
-            border-radius: variables.$radius-small;
-            transition: background-color 350ms ease-in-out;
-        }
-
-        .TreeView__item:not(.TreeView__item_has-items).TreeView__item_selected { 
-            background-color: $sidebar-background-color-selected;
-        }
-
         .ButtonView .ButtonView__link .ButtonView__text {
-            font-size: variables.$font-size-16;
-            font-weight: variables.$font-weight-sm;
-            line-height: variables.$line-height-22;
-
-            white-space: nowrap; /* Запретить перенос текста */
-            overflow: hidden; /* Скрыть содержимое, выходящее за границы ячейки */
-            text-overflow: ellipsis; /* Добавить многоточие, если текст обрезается */
-
             @media (max-width: variables.$tablet-width-small) {
                 width: 147px;
             }
+        }
+
+        .TreeView__item {
+            &_has-items:not(.TreeView__item_level_1):not(:first-child) .TreeView__item-label {
+                margin-top: 16px;
+            }
+
+        }
+
+        @media (max-width: 748px) {
+            display: none;
         }
     }
 
