--- a/src/shared/Header/views/HeaderLogo/HeaderLogo.scss
+++ b/src/shared/Header/views/HeaderLogo/HeaderLogo.scss
@@ -1,7 +1,6 @@
 @use "style/variables";
 
 .HeaderLogo {
-
     .ButtonView__text {
         display: flex;
         flex-flow: row nowrap;
@@ -12,15 +11,19 @@
     @media (max-width: variables.$mobile-width-small) {
         height: 64px;
         gap: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     &__icon {
+        display: block;
+        height: 64px;
         transform: translateY(3px);
 
         @media (max-width: variables.$mobile-width-small) {
-            width: 40px;
-            height: 40px;
-            transform: scale(1.45);
+            width: 42px;
+            transform: scale(1.4);
         }
 
         svg {
@@ -41,6 +44,7 @@
             font-size: variables.$font-size-18;
             font-weight: variables.$font-weight-sm;
             line-height: variables.$line-height-24;
+            transform: translateY(-1.5px);
         }
     }
 }
