--- a/src/style/mixins/markdown.scss
+++ b/src/style/mixins/markdown.scss
@@ -1,6 +1,16 @@
 
 @use "style/variables";
 
+:root { 
+    --markdown-code-color: #651FFF;
+}
+
+html[data-theme="dark"] { 
+    --markdown-code-color: #B898FF;
+}
+
+$markdown-code-color: var(--markdown-code-color);
+
 @mixin markdown() {
     $block-max-width: 700px;
 
@@ -59,7 +69,7 @@
     }
 
     code {
-        color: variables.$primary;
+        color: $markdown-code-color;
     }
 
     ul {
@@ -82,7 +92,7 @@
 
     a {
         text-decoration: underline;
-        color: variables.$primary;
+        color: $markdown-code-color;
 
         &:hover {
             color: variables.$primary-dark;
