Review code changes

--- a/src/style/mixins/markdown.scss
+++ b/src/style/mixins/markdown.scss
@@ -90,6 +90,11 @@ $markdown-code-color: var(--markdown-code-color);
         }
     }
 
+    ul.NavLinkView__list { 
+        display: flex;
+        flex-flow: column nowrap;
+    }
+
     a {
         text-decoration: underline;
         color: $markdown-code-color;
