--- a/src/routes/IndexPage/views/ExamplesSection/views/ExampleCard/ExampleCard.scss
+++ b/src/routes/IndexPage/views/ExamplesSection/views/ExampleCard/ExampleCard.scss
@@ -39,34 +39,10 @@
         }
     }
 
-    &:nth-child(3) {
-        #{$root}__img-wrapper {
-            width: 396.382px;
-            height: 320px;
-
-            margin-top: 67px;
-        }
-    }
-
-    &:nth-child(4) {
-        #{$root}__img-wrapper {
-            width: 262.545px;
-            height: 380px;
-
-            margin-top: 38px;
-        }
-    }
-
-    &:nth-child(5) {
-        #{$root}__img-wrapper {
-            width: 300px;
-            height: 95.207px;
-
-            margin-top: 151px;
-        }
-    }
-
     &__img-wrapper {
+        max-width: 396px;
+        max-height: 380px;
+
         margin: auto 0;
 
         @media (max-width: variables.$mobile-width-small) {
